--- a/style.css
+++ b/style.css
@@ -66,11 +66,9 @@ body {
     padding: 0rem 2rem;
 }
 
-.footer .icon {
-    margin: 1rem;
-    border: 2px solid white;
-    border-radius: 50%;
-    padding: 0.5rem;
+.icon {
+    width: 40px;
+    margin: 0rem 1rem;
 }
 
 .attribution {
